--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,13 +10,13 @@
     <string name="imagen_bonita">Imagen bonita</string>
     <string name="button">Button</string>
     <string name="button_start">Iniciar sesión</string>
-    <string name="textview">TextView</string>
     <string name="inicie_sesi_n">inicie Sesión:</string>
     <string name="el_goku_de_fondo">El_goku_de_fondo</string>
     <string name="email">Email</string>
     <string name="password">password</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="init">Inicio</string>
     <string name="inice_sesi_n">Inice Sesión</string>
     <string name="contrase_a">Contraseña</string>
     <string name="nickname_indication">nombre:</string>
@@ -26,5 +26,4 @@
     <string name="salir">Salir</string>
     <string name="ver_historial_de_compra">Ver Historial De Compra</string>
     <string name="ver_todas_las_medallas">Ver Todas Las Medallas</string>
-
 </resources>
