tercer commit, fixed funtion loadFragomentBuyTickets

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="salir">Salir</string>
     <string name="ver_historial_de_compra">Ver Historial De Compra</string>
     <string name="ver_todas_las_medallas">Ver Todas Las Medallas</string>
+    <string name="goku">GOKU</string>
 </resources>
