--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,30 +1,27 @@
 <resources>
     <string name="app_name">Pro Olympics</string>
-    <string name="hola_pibes">Hola PIBES</string>
+    <string name="hello">Hello</string>
+
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="imagen_bonita">Imagen bonita</string>
     <string name="button">Button</string>
-    <string name="button_start">Iniciar sesión</string>
-    <string name="inicie_sesi_n">inicie Sesión:</string>
-    <string name="el_goku_de_fondo">El_goku_de_fondo</string>
+    <string name="button_start">Login</string>
+    <string name="login_session">Login Session</string>
     <string name="email">Email</string>
-    <string name="password">password</string>
+    <string name="password">Password</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="init">Inicio</string>
-    <string name="inice_sesi_n">Inice Sesión</string>
-    <string name="contrase_a">Contraseña</string>
-    <string name="nickname_indication">nombre:</string>
-    <string name="nombre_o_contrase_a_incorrectos">Nombre o Contraseña Incorrectos!</string>
-    <string name="password_or_email_are_incorrect">Contraseña o email incorrecto</string>
-    <string name="comprar_tickets">Comprar Tickets</string>
-    <string name="salir">Salir</string>
-    <string name="ver_historial_de_compra">Ver Historial De Compra</string>
-    <string name="ver_todas_las_medallas">Ver Todas Las Medallas</string>
-    <string name="goku">GOKU</string>
+    <string name="home">Home</string>
+    <string name="contrase_a">Password</string>
+    <string name="nickname_indication">Name:</string>
+    <string name="name_or_password_incorrect">Name or Password Incorrect!</string>
+    <string name="password_or_email_are_incorrect">Password or Email Incorrect</string>
+    <string name="buy_tickets">Buy Tickets</string>
+    <string name="out">Exit</string>
+    <string name="ver_historial_de_compra">View Purchase History</string>
+    <string name="view_all_medals">View All Medals</string>
+    <string name="text_for_images">Images description</string>
 </resources>
