--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,5 @@
     <string name="pro">PRO</string>
     <string name="elite">ELITE</string>
     <string name="ultimate_event">ULTIMATE EVENT</string>
-    <string name="select_an_option">Select an option:</string>
+    <string name="select_an_option">Select an intermediary option:</string>
 </resources>
